--- a/messagegroups/templates/messagegroups.html
+++ b/messagegroups/templates/messagegroups.html
@@ -1,6 +1,6 @@
 {% if messages %}
     {% for key, values in messages.items %}
-        <div class="messages {{ key.1 }}">
+        <div class="message {{ key.1 }}">
             <ul>
             {% for m in values %}
                 <li>{{ m }}</li>
