--- a/messagegroups/templates/messagegroups.html
+++ b/messagegroups/templates/messagegroups.html
@@ -1,6 +1,6 @@
 {% if messages %}
-    {% for key, values in messages.items %}
-        <div class="alert alert-{{ key.1 }}">
+    {% for key, values in messages.iteritems %}
+        <div class="alert {{ key.1 }}">
             {{ values|join:"<br>" }}
         </div>
     {% endfor %}
