Fix Python 3 bug in default template

--- a/messagegroups/templates/messagegroups.html
+++ b/messagegroups/templates/messagegroups.html
@@ -1,5 +1,5 @@
 {% if messages %}
-    {% for key, values in messages.iteritems %}
+    {% for key, values in messages.items %}
         <div class="alert {{ key.1 }}">
             {{ values|join:"<br>" }}
         </div>
